--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -2,11 +2,30 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-        <link  rel="stylesheet" herf="css/styles.css">    
-    </head>
+        <link  rel="stylesheet" href="css/styles.css">    
+        <script  type="text/javascript"src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script  type="text/javascript"src="comportamento/javaScriptIndex.js"></script>
+        
+        <h1>Bem-vindo ao seu email</h1>
+      </head>
     <body>
+      <form>
+       <div> 
+        Email: <input size="50" type="text" placeholder="email@example.com"><br> <br>
+        Senha: <input  size="50" type="password" placeholder="senha">
+      </div>
+      <div>
+        <br>
+        <a id="logar" href="paginas/caixaDeEntrada.html">Realizar login</a>
+      </div>
+      </form>
+      <div>
+        <a href="paginas/realizarCadastro.html"><h3> Não possui uma conta ainda? Cadastra-se aqui!</h3></a>
+      </div>
 
 
+
+<!-- melhor form ate agora
             <form class="form-horizontal">
                     <div class="form-group">
                       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
@@ -31,10 +50,32 @@
                     </div>
                     <div class="form-group">
                       <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default" onclick="location.href='paginas/caixaEntrada.html'">Logar</button>
+                         <button  type="submit" class="btn btn-default" >Logar</button>
+                     
                       </div>
                     </div>
                   </form>
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!--
         <form>
             <h1> Realize o seu login:</h1><br>
