--- a/Projeto/paginas/realizarCadastro.html
+++ b/Projeto/paginas/realizarCadastro.html
@@ -1,8 +1,24 @@
 <html>
 
     <head>
-               
+		<script  type="text/javascript"src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script  type="text/javascript"src="../comportamento/javaScriptLogin.js"></script>
     </head>
+	
+	<body>
+		<form method="post" action="./comportamento/login.php">
+		Endereço de e-mail: <br>
+		<input id="email" size="50" type="text" placeholder="email@example.com"> <br>
+		Senha: <br>
+		<input id="senha" size="50" type="password" placeholder="senha"> <br>
+		Confirmar Senha: <br>
+		<input id="confSenha" size="50" type="password" placeholder="senha"> <br>
+		
+		<button id="bLog"> PRONTO! </button>
+		</form>
+		
+		
+	</body>
 
 
 </html>
