Arruma isso pelo amor de deus ui ui
Limpando essa bagaça

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -4,14 +4,14 @@
 
         <link  rel="stylesheet" href="css/styles.css">    
         <script  type="text/javascript"src="https://code.jquery.com/jquery-3.4.1.js"></script>
-        <script  type="text/javascript"src="comportamento/javaScriptIndex.js"></script>
+        <script  type="text/javascript"src="../js/javaScriptIndex.js"></script>
         
         <h1>Bem-vindo ao seu email</h1>
       </head>
     <body>
       <form>
        <div> 
-        Email: <input size="50" type="text" placeholder="email@example.com"><br> <br>
+        Email: <input size="50" type="email" placeholder="email@example.com"><br> <br>
         Senha: <input  size="50" type="password" placeholder="senha">
       </div>
       <div>
