--- a/Projeto/paginas/caixaDeEntrada.html
+++ b/Projeto/paginas/caixaDeEntrada.html
@@ -3,7 +3,7 @@
 
         <link  rel="stylesheet" href="../css/caixaEntrada.css">
         <script  type="text/javascript"src="https://code.jquery.com/jquery-3.4.1.js"></script>
-        <script  type="text/javascript"src="../comportamento/javaScriptEntrada.js"></script>
+        <script  type="text/javascript"src="../js/javaScriptEntrada.js"></script>
 
         <h1>Bem vindo a sua caixa de entrada!</h1>
 
