--- a/Projeto/paginas/realizarCadastro.html
+++ b/Projeto/paginas/realizarCadastro.html
@@ -2,13 +2,13 @@
 
     <head>
 		<script  type="text/javascript"src="https://code.jquery.com/jquery-3.4.1.js"></script>
-        <script  type="text/javascript"src="../comportamento/javaScriptLogin.js"></script>
+        <script  type="text/javascript"src="../js/javaScriptLogin.js"></script>
     </head>
 	
 	<body>
-		<form method="post" action="./comportamento/login.php">
+		<form method="post" action="./js/login.php">
 		Endereço de e-mail: <br>
-		<input id="email" size="50" type="text" placeholder="email@example.com"> <br>
+		<input id="email" size="50" type="email" placeholder="email@example.com"> <br>
 		Senha: <br>
 		<input id="senha" size="50" type="password" placeholder="senha"> <br>
 		Confirmar Senha: <br>
