--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -12,6 +12,6 @@
             <input id="tSenha" type="password" size="50" placeholder="Senha"/>
             <br>
             <button id="bEntrar" size="50">Entrar</button>
-            <button id="bCadastrar" size="50">Cadastrar</button>
+            <button id="bCadastro" size="50">Cadastrar</button>
     </body>
 </html>
