Dando uma embelezada
Tacando css em tudo e arrumando a aparencia parte.1

Co-Authored-By: duda01grein <duda01grein@users.noreply.github.com>

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -1,17 +1,37 @@
 <html>
-
     <head>
         <meta charset="utf-8">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="./js/funcoes.js"></script>
+        <link rel="stylesheet" type="text/css" href="./css/loguin.css">
     </head>
-
     <body>
-            <input id="tEmail" type="email" size="50" placeholder="E-Mail"/>
-            <br>
-            <input id="tSenha" type="password" size="50" placeholder="Senha"/>
-            <br>
-            <button id="bEntrar" size="50">Entrar</button>
-            <button id="bCadastro" size="50">Cadastrar</button>
+        <div>
+            <table class="centralizar">
+                <tr>
+                    <td align="center" colspan="2" >
+                        Imagem aqui
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" colspan="2">
+                        <input id="tEmail" type="email" placeholder="E-Mail"/>
+                    </td>
+                </tr>
+                <tr >
+                    <td align="center" colspan="2">
+                        <input id="tSenha" type="password" placeholder="Senha"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button id="bEntrar" >Entrar</button>
+                    </td>
+                    <td>
+                        <a href="./paginas/Cadastro.html" >Criar uma nova conta.</a>.
+                    </td>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
