--- a/Projeto/paginas/Cadastro.html
+++ b/Projeto/paginas/Cadastro.html
@@ -4,16 +4,39 @@
         <meta charset="utf-8">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="../js/funcoes.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/loguin.css">
     </head>
 
     <body>
-            <input id="tEmail" type="email" size="50" placeholder="E-Mail"/>
-            <br>
-            <input id="tSenha" type="password" size="50" placeholder="Senha"/>
-            <br>
-            <input id="tConfSenha" type="password" size="50" placeholder="Confirmar Senha"/>
-            <br>
-            <button id="bCadastrar" size="50">Cadastrar</button>
-            <br>
+        <div>
+            <table class="centralizar">
+                <tr>
+                    <td>
+                        Imagem aqui
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td>
+                        <input id="tEmail" type="email" placeholder="E-Mail"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input id="tSenha" type="password" placeholder="Senha"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input id="tConfSenha" type="password" placeholder="Confirmar Senha"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button id="bCadastrar">Cadastrar</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
