--- a/Projeto/paginas/Email.html
+++ b/Projeto/paginas/Email.html
@@ -4,25 +4,37 @@
         <meta charset="utf-8">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="../js/funcoes.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/email.css"">
 
-        <h1>Bem vindo a sua caixa de entrada!</h1>
-        
     </head>
 
     <body>
-        <navbar>
-            <div>
-                <button id="bMenu">hgyiggi</button>
-            </div>
-            <div>
-                <p>Barra Pesquisa</p>
-            </div>
-            <div>
-                <p id="pNome">Usuario</p>
-            </div>
-            <div>
-                <button id="bConta">"Foto"</button>
-            </div>
-        </navbar>
+        <table width="100%">
+            <td>
+                <tr>
+                    <button id="bMenu">O</button>
+                </tr>
+            </td>
+            <td>
+                <tr>
+                    <input id="tPesquisa" type="text" placeholder="Pesquisar..."/>
+                </tr>
+            </td>
+            <td>
+                <tr>
+                    <button id="bLupa">O</button>
+                </tr>
+            </td>
+            <td>
+                <tr>
+                    <a id="aNome">Nome</a>
+                </tr>
+            </td>
+            <td>
+                <tr>
+                    <button id="bConta">O</button>
+                </tr>
+            </td>
+        </table>
     </body>
 </html>
